<resources>
    <string name="app_name">Fashionee</string>
    <string name="onboarding1_heading">20% Discount New Arrival Product</string>
    <string name="onboarding1_description">Get Up to 20% Discount on all new arrival products in our website</string>
    <string name="onboarding2_heading">Pick The Most Fit</string>
    <string name="onboarding2_description">A great collection of all colors and sizes to easily find the piece that suits you</string>
    <string name="onboarding3_heading">Stay Always Modern</string>
    <string name="onboarding3_description">Our fashion models are continuesly updated so that they are never old-fashioned</string>
    <string name="welcome">Welcome</string>
    <string name="login_description">Please login using credentials or via social media</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_description">Create a new account to get access</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="login_incorrect">Your Login Credentials seem to be incorrect.</string>
    <string name="network_failed">Process Failed. Please Check Network then try again.</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="search">Search..</string>
    <string name="categories">Categories</string>
    <string name="top_products">Top Products</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="search_results">Search Results</string>
    <string name="add_to_cart_succeed">Product Added to Cart</string>
    <string name="add_to_cart_fail">Failed to add Product to Cart</string>
    <string name="pieces">Pieces</string>
    <string name="checkout">Checkout</string>
    <string name="logout">Logout</string>
    <string name="switch_language">Switch Language</string>
</resources>