<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".fragments.main.HomeFragment">

    <TextView
        style="@style/TextAppearance.AppCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="28sp"
        android:text="@string/welcome"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        app:cardCornerRadius="32dp">

        <androidx.appcompat.widget.SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSecondaryVariant"
            app:queryHint="@string/search"
            app:queryBackground="@null"
            app:iconifiedByDefault="false"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/sampleProductParentView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:cardCornerRadius="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/productImageCardView"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:id="@+id/productImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/fashion3"/>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/productImageCardView"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.AppCompat"
                    android:id="@+id/productTitleView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    tools:text="Axel Arigato"/>

                <TextView
                    android:id="@+id/productDescriptionView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Clean 90 Triple Sneakers"/>

                <TextView
                    style="@style/TextAppearance.AppCompat"
                    android:id="@+id/productPriceView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    tools:text="$245.00"/>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:id="@+id/productOpenButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                app:iconSize="24dp"
                app:iconPadding="0dp"
                app:icon="@drawable/ic_baseline_arrow_forward_24"
                app:cornerRadius="8dp"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        style="@style/TextAppearance.AppCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/categories"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoriesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"/>

    <TextView
        style="@style/TextAppearance.AppCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/top_products"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/topProductsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"/>

</LinearLayout>