<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/productParentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/productImagesViewPager"
        android:layout_width="match_parent"
        android:layout_height="400dp"/>

    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
        android:id="@+id/productImagesIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/productImagesViewPager"
        app:dotsColor="?attr/colorSecondaryVariant"
        app:selectedDotColor="?attr/colorOnPrimary"
        android:translationY="-64dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="368dp"
        android:layout_marginBottom="-32dp"
        app:cardCornerRadius="32dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="32dp"
            android:paddingHorizontal="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="64dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.AppCompat"
                    android:id="@+id/productTitleView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="28sp"
                    tools:text="Roller Rabbit"/>

                <RatingBar
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:id="@+id/productRatingView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"/>

                <TextView
                    style="@style/TextAppearance.AppCompat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:text="@string/description"/>

                <TextView
                    android:id="@+id/productDescriptionView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@tools:sample/lorem/random"/>

                <TextView
                    style="@style/TextAppearance.AppCompat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:text="@string/quantity"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/increaseQuantityButton"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:backgroundTint="?attr/colorSecondaryVariant"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="18sp"
                        android:text="+"
                        app:cornerRadius="8dp"/>

                    <TextView
                        style="@style/TextAppearance.AppCompat"
                        android:id="@+id/quantityView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:textSize="24sp"
                        android:text="1"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/decreaseQuantityButton"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:backgroundTint="?attr/colorSecondaryVariant"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="18sp"
                        android:text="-"
                        app:cornerRadius="8dp"/>

                </LinearLayout>

                <TextView
                    style="@style/TextAppearance.AppCompat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:text="@string/price"/>

                <TextView
                    style="@style/TextAppearance.AppCompat"
                    android:id="@+id/productPriceView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    tools:text="$249.00"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:text="@string/add_to_cart"
                    app:cornerRadius="8dp"/>

            </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

</RelativeLayout>